seaqt/QtMultimedia/gen_qplaybackoptions.h

class QMetaObject;
class QPlaybackOptions;
typedef struct QMetaObject QMetaObject;
typedef struct QPlaybackOptions QPlaybackOptions;
QPlaybackOptions* QPlaybackOptions_new();
QPlaybackOptions* QPlaybackOptions_new_from(QPlaybackOptions* from);
void QPlaybackOptions_operatorAssign(QPlaybackOptions* self, QPlaybackOptions* from);
void QPlaybackOptions_swap(QPlaybackOptions* self, QPlaybackOptions* other);
void QPlaybackOptions_resetNetworkTimeout(QPlaybackOptions* self);
int QPlaybackOptions_playbackIntent(const QPlaybackOptions* self);
void QPlaybackOptions_setPlaybackIntent(QPlaybackOptions* self, int intent);
void QPlaybackOptions_resetPlaybackIntent(QPlaybackOptions* self);
ptrdiff_t QPlaybackOptions_probeSize(const QPlaybackOptions* self);
void QPlaybackOptions_setProbeSize(QPlaybackOptions* self, ptrdiff_t probeSizeBytes);
void QPlaybackOptions_resetProbeSize(QPlaybackOptions* self);
const QMetaObject* QPlaybackOptions_staticMetaObject();